# agents

./: .gitignore  actions.md  campaign_plan.json  content_drafts.md  final_report.md
Customer_service/: README.md  conversation.db  conversation.db-shm  conversation.db-wal  customer_agent.py  customer_gr.py  customer_service_agent.ipynb  guardrail.py  tools.py
marketing_content_agent/market_research_agent/: README.md  actions.md  final_report.md  publishing_log.csv  pyproject.toml  trends_report.md
marketing_content_agent/market_research_agent/Customer_service/: customer_service_agent.ipynb
src/marketing_content_agent/: crew.py  main.py
src/marketing_content_agent/config/: agents.yaml  tasks.yaml
