[project]
name = "marketing_content_agent"
version = "0.1.0"
description = "marketing_content_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "agentops>=0.4.18",
    "crewai[tools]>=0.141.0,<1.0.0",
    "python-dotenv>=1.1.1",
]

[project.scripts]
marketing_content_agent = "marketing_content_agent.main:run"
run_crew = "marketing_content_agent.main:run"
train = "marketing_content_agent.main:train"
replay = "marketing_content_agent.main:replay"
test = "marketing_content_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
